<resources>
    <string name="app_name">Desarrollo_apps_android_tarea2_v2</string>
    <string name="nombre">Nombre completo</string>
    <string name="feedbackname">Nombre completo</string>
    <string name="fecha_nac">Fecha de nacimiento</string>
    <string name="telefono">Teléfono</string>
    <string name="email">Email</string>
    <string name="enviar_datos">Enviar Datos</string>
    <string name="descripContacto">Descripción de Contacto</string>
    <string name="editar_datos">Editar Datos</string>
</resources>