<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Confirmar">
    <LinearLayout
        android:id = "@+id/layout1"
        android:layout_width="fill_parent"
        android:orientation="vertical"
        android:layout_height="fill_parent">

        <TextView
            android:id="@+id/tvNombre"
            android:layout_height="wrap_content"
            android:hint="@string/feedbackname"
            android:inputType="textPersonName"
            android:layout_width="fill_parent">
        </TextView>




        <TextView
            android:id="@+id/tvTelefono"
            android:layout_height="wrap_content"
            android:hint="@string/telefono"
            android:layout_width="fill_parent">
        </TextView>




        <TextView
            android:id="@+id/tvFecha_Nac"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:focusable="false"/>




        <TextView
            android:id="@+id/tvEmail"
            android:layout_height="wrap_content"
            android:hint="@string/email"
            android:layout_width="fill_parent">
        </TextView>



        <TextView
            android:id="@+id/tvDescripContacto"
            android:layout_height="wrap_content"
            android:hint="@string/descripContacto"
            android:layout_width="fill_parent">
        </TextView>
    </LinearLayout>




    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/BotonEnviar"
        android:layout_height="wrap_content"
        android:text="@string/editar_datos"
        android:layout_width="wrap_content"
        android:onClick="Edition"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
    </androidx.appcompat.widget.AppCompatButton>

</androidx.constraintlayout.widget.ConstraintLayout>